--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metamsk",
+  "name": "METAMSK",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "@hellomoon/api": "1.17.4",
+    "@metaplex-foundation/js": "0.19.5",
+    "@solana/spl-token": "^0.3.11",
+    "@solana/web3.js": "1.87.1",
+    "@thirdweb-dev/react": "3.14.35",
+    "next": "13.5.4",
+    "next-connect": "0.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.21",
+    "tailwindcss": "3.3.1"
   }
 }
